Version: 1.0.5
Date: 2020.09.XX
  Features:
    - Added function `composite_existing_icons`
  Changes:
    - Directories are now handled via the `mod` field of the `inputs` table, instead of the `directory` field
    - Function `create_icons_from_list` can now handle the `mod` field of the `inputs` table
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2020.09.06
  Features:
    - Added setting `Color intensity`, affecting how bright structures, vehicles and robots appear in-world
  Changes:
    - Improved clarity of tier labels at 16px; removed tier labels for 6th tier
    - Added support for `icon_picture_extras` in function `create_icons_from_list`
  Locale:
    - Added localization support for Czech
    - Updated German localization
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2020.08.24
  Changes:
    - Reverted `icon_size` and `icon_mipmaps` are now set to `nil` when `icons` is defined
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2020.08.24
  Changes:
    - Added functionality to `create_icons_from_list` to be able to specify belt-type masks
    - Adjusted bright spot in oil refinery highlight
    - Added Bob's Assembling Machines and Angel's Petrochem as hidden dependencies to fix Oil Refinery reskinning issues
  Locale:
    - Added localization support for German
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020.08.15
  Features:
    - Added function `rescale_minimachine_technology`
  Changes:
    - `icon_size` and `icon_mipmaps` are now set to `nil` when `icons` is defined, and they are defined per-entry within `icons`
  Bugfixes:
    - Fixed that `tint_index` could not be defined under some edge cases